--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,12 @@
   "globals": { "document": true },
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
+    }
   }
 }
