add icons and simple atoms

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "env": { "jest": true },
   "globals": { "document": true },
   "rules": {
+    "import/prefer-default-export": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }]
   },
   "settings": {
