--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,33 @@
 {
   "extends": ["airbnb", "prettier", "prettier/react"],
   "parser": "babel-eslint",
-  "env": { "jest": true },
+  "env": {
+    "jest": true
+  },
   "globals": {
-    "document": true,
-    "window": true
+    "window": true,
+    "document": true
   },
   "rules": {
-    "react/state-in-constructor": 0,
+    "react/destructuring-assignment": 0,
+    "no-underscore-dangle": 0,
+    "react/prop-types": 0,
     "import/prefer-default-export": 0,
-    "react/jsx-filename-extension": [1, { "extensions": [".js"] }]
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 1,
+    "react/state-in-constructor": 0,
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js"]
+      }
+    ]
   },
   "settings": {
     "import/resolver": {
       "node": {
-        "paths": ["src"]
+        "paths": ["./src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     }
   }
