--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,8 @@
     "import/no-extraneous-dependencies": 0,
     "import/no-unresolved": 1,
     "react/state-in-constructor": 0,
+    "array-callback-return": 0,
+    "consistent-return": 0,
     "react/jsx-filename-extension": [
       1,
       {
